# BDMS

./: .flake8  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  docs-build-and-deploy.yml
bdms/: __init__.py  bdms.py  bdms_utils.py  mutators.py  poisson.py  tree.py  utils.py
docs/: Makefile  api.rst  cite.rst  conf.py  developer.rst  index.rst  install.rst
docs/notebooks/: performance.ipynb  quickstart.ipynb
notebooks/: inhomogeneous.ipynb  quickstart.ipynb
tests/: test_bdms.py
