[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# this allows dependencies to be specified with a url
# allow-direct-references = true

[project]
name = "BDMS"
authors = [
  { name="Thanasi Bakis", email="abakis@uci.edu" },
  { name="Michael Celentano", email="mcelentano@berkeley.edu" },
  { name="William DeWitt", email="wsdewitt@gmail.com" },
  { name="Frederick Matsen", email="ematsen@gmail.com" },
  { name="Volodymyr Minin", email="yss@berkeley.edu" },
  { name="Sebastian Prillo", email="sprillo@berkeley.edu" },
  { name="Duncan Ralph", email="dkralph@gmail.com" },
  { name="Yoonseo Song", email="ysong07@cs.washington.edu" },
  { name="Yun Song", email="yss@berkeley.edu" },
]
description = "Tree simulator for birth-death-mutation-sampling (BDMS) processes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
  "ete3",
]

[project.optional-dependencies]
pyqt = [
  "pyqt5",
]
dev = [
  "hatch",
  "black[jupyter]",
  "docformatter",
  "flake8",
  "pytest",
  "nbval",
  "pyright",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-autoapi",
  "furo",
  "myst-nb",
  "pandoc",
  "jupyter",
  "seaborn",
]

[tool.hatch.version]
path = "bdms/__init__.py"

[project.urls]
"Homepage" = "https://github.com/WSDeWitt/BDMS"
"Bug Tracker" = "https://github.com/WSDeWitt/BDMS/issues"
"Documentation" = "https://wsdewitt.github.io/BDMS"

[tool.pyright]
include = ["bdms", "tests"]